# clcat

./: Cargo.toml  LICENSE
src/: cli.rs  error.rs  main.rs
